# kozzle-word-tts

./: .env  .gitignore  AGENTS.md  README.md  demo.py  diagnose.py  generate_audio.py  main.py  pyproject.toml  requirement.txt  sample_korean.txt  test_import.py  test_kiwi.py  test_setup.py  test_whitespace.txt  test_with_sentences.json
output/: result.json
src/: cli.py  config.py  file_loader.py  json_writer.py  noun_extractor.py  pipeline.py  tts_generator.py
src/kozzle_word_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm/: provider.py  schemas.py  sentence_chain.py
test_input/: file1.txt  file2.txt  file3.txt
